# kubernetes-job-result-notifier

./: Dockerfile  LICENSE  README.md  example-deployment.yaml  k8s_job_notifier.py  kubernetes_job_notifier.py  pyproject.toml
.github/workflows/: publish-container-image.yaml
resources/: failing-job.yaml
