[tool.poetry]
name = "k8s-job-notifier"
version = "0.1.0"
description = "Send slack messages on Kubernetes job events"
authors = ["zanderhavgaard <zander@havgaard.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = "^30.1.0"
slack-sdk = "^3.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
