[tool.poetry]
name = "kubernetes-job-result-notifier"
version = "0.1.1"
description = "Send slack messages on Kubernetes job events"
authors = ["zanderhavgaard <zander@havgaard.dk>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = "^30.1.0"
slack-sdk = "^3.31.0"
dynaconf = "^3.2.6"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
pylint = "^3.2.6"
flake8 = "^7.1.1"
kubernetes-stubs = "^22.6.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
